[package]
name = "rsmq-sync"
version = "1.0.0"
authors = [
    "David Bonet <webbonet@gmail.com>",
    "CJ <cocathecafe@gmail.com>"
]
edition = "2021"
license = "MIT"
description = "RSMQ port to rust. RSMQ is a simple redis queue system that works in any redis v2.4+. It contains the same methods as the original one in https://github.com/smrchy/rsmq"
homepage = "https://crates.io/crates/rsmq_sync"
repository = "https://github.com/GopherJ/rsmq-sync"
documentation = "https://docs.rs/rsmq_sync/"
readme = "README.md"

[dependencies]
lazy_static = "^1"
rand = "^0.8"
radix_fmt = "^1"
r2d2 = { version = "^0.8" }
thiserror = "^1"
redis = { version = "^0.25", default-features = false, features = ["acl", "keep-alive", "script"] }
serde_json = "1.0"
hex = "0.4.3"

[dev-dependencies]
net2 = "^0.2"
tokio = { version = "^1", features = ["full"]}

[features]
